--- a/TeamPlanner/TeamWebsite/templates/team_detail.html
+++ b/TeamPlanner/TeamWebsite/templates/team_detail.html
@@ -1,7 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Team/Member Detail</title>
+    <link rel="stylesheet" href="{% static 'teamwebsite/style.css' %}">
 </head>
 <body>
     <h1>{{ team.name }}</h1>
