--- a/TeamPlanner/TeamWebsite/templates/member_detail.html
+++ b/TeamPlanner/TeamWebsite/templates/member_detail.html
@@ -1,7 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Member Detail</title>
+    <link rel="stylesheet" href="{% static 'teamwebsite/style.css' %}">
 </head>
 <body>
     <h1>{{ member.name }}</h1>
