--- a/TeamWebsite/templates/new_member.html
+++ b/TeamWebsite/templates/new_member.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="{% static 'teamwebsite/style.css' %}">
 </head>
 <body>
-<h1> Create a new member</h1>
+<h1>Create a new member</h1>
 <form method="post">
     <table>
-        {{ form }}
+        {{ form.as_table }}
     </table>
     {% csrf_token %}
     <button type="submit">Create</button>
 </form>
+<a href="{% url 'home' %}"><button type="button">Home</button></a> <!-- Home button -->
 </body>
 </html>
