--- a/TeamWebsite/templates/new_team.html
+++ b/TeamWebsite/templates/new_team.html
@@ -10,10 +10,11 @@
 <h1>Create a new team</h1>
 <form method="post">
     <table>
-        {{ form }}
+        {{ form.as_table }}
     </table>
     {% csrf_token %}
     <button type="submit">Create</button>
 </form>
+<a href="{% url 'home' %}"><button type="button">Home</button></a> <!-- Home button -->
 </body>
 </html>
