--- a/TeamWebsite/templates/team_detail.html
+++ b/TeamWebsite/templates/team_detail.html
@@ -12,7 +12,25 @@
     <ul>
         {% for member in team_members %}
             <li>{{ member.name }} - {{ member.role }} - {{ member.start_date }}</li>
+            <!-- Update Link -->
+            <a href="{% url 'update_member' member.id %}">Update</a>
+            <!-- Delete Form -->
+            <form action="{% url 'delete_member' member.id %}" method="post" style="display:inline;">
+                {% csrf_token %}
+                <input type="submit" value="Delete" onclick="return confirm('Are you sure you want to delete this member?');">
+            </form>
         {% endfor %}
     </ul>
+
+    <!-- Add Member Form -->
+    <form action="{% url 'add_member_to_team' team.id %}" method="post" style="margin-top: 20px;">
+        {% csrf_token %}
+        <select name="member">
+            {% for member_option in available_members %}
+                <option value="{{ member_option.id }}">{{ member_option.name }}</option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="Add Member">
+    </form>
 </body>
 </html>
