--- a/TeamWebsite/templates/create_manager.html
+++ b/TeamWebsite/templates/create_manager.html
@@ -1,19 +1,18 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Create Manager</title>
+    <title>Add New Manager</title>
     <link rel="stylesheet" href="{% static 'teamwebsite/style.css' %}">
 </head>
 <body>
-<h1>Create a New Manager</h1>
-<form method="post">
-    <table>
-        {{ form }}
-    </table>
-    {% csrf_token %}
-    <button type="submit">Create</button>
-</form>
+    <h1>Add New Manager</h1>
+    <form method="post" action="{% url 'create_manager' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Add Manager</button>
+    </form>
+    <a href="{% url 'manager_list' %}">Back to Manager List</a>
+<a href="{% url 'home' %}"><button type="button">Home</button></a> <!-- Home button -->
 </body>
 </html>
