--- a/TeamWebsite/templates/delete_manager.html
+++ b/TeamWebsite/templates/delete_manager.html
@@ -13,5 +13,6 @@
     {% csrf_token %}
     <button type="submit">Delete</button>
 </form>
+<a href="{% url 'home' %}"><button type="button">Home</button></a> <!-- Home button -->
 </body>
 </html>
