--- a/TeamWebsite/templates/member_detail.html
+++ b/TeamWebsite/templates/member_detail.html
@@ -18,5 +18,6 @@
         {% csrf_token %}
         <input type="submit" value="Delete" onclick="return confirm('Are you sure you want to delete this member?');">
     </form>
+<a href="{% url 'home' %}"><button type="button">Home</button></a> <!-- Home button -->
 </body>
 </html>
