--- a/TeamWebsite/templates/team_detail.html
+++ b/TeamWebsite/templates/team_detail.html
@@ -32,5 +32,6 @@
         </select>
         <input type="submit" value="Add Member">
     </form>
+<a href="{% url 'home' %}"><button type="button">Home</button></a> <!-- Home button -->
 </body>
 </html>
