added proper buttons as well as an update_manager html

--- a/TeamWebsite/templates/home.html
+++ b/TeamWebsite/templates/home.html
@@ -43,10 +43,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'new_member' %}">Add New Member</a></li>
-            <li><a href="{% url 'new_team' %}">Add New Team</a></li>
-            <li><a href="{% url 'manager_list' %}">Managers</a></li> <!-- Added link to manager list -->
+            <li><a href="{% url 'new_member' %}"><button type="button">Add New Member</button></a></li>
+            <li><a href="{% url 'new_team' %}"><button type="button">Add New Team</button></a></li>
+            <li><a href="{% url 'manager_list' %}"><button type="button">Managers</button></a></li> <!-- Added link to manager list -->
         </ul>
     </nav>
     <h1>Teams</h1>
