--- a/TeamWebsite/templates/create_manager.html
+++ b/TeamWebsite/templates/create_manager.html
@@ -12,7 +12,7 @@
         {{ form.as_p }}
         <button type="submit">Add Manager</button>
     </form>
-    <a href="{% url 'manager_list' %}">Back to Manager List</a>
+    <a href="{% url 'manager_list' %}"><button type="button">Back to Manager List</button></a>
 <a href="{% url 'home' %}"><button type="button">Home</button></a> <!-- Home button -->
 </body>
 </html>
