added team delete

--- a/TeamWebsite/templates/team_detail.html
+++ b/TeamWebsite/templates/team_detail.html
@@ -32,6 +32,13 @@
         </select>
         <input type="submit" value="Add Member">
     </form>
-<a href="{% url 'home' %}"><button type="button">Home</button></a> <!-- Home button -->
+
+    <!-- Delete Team Button -->
+    <form action="{% url 'delete_team' team.id %}" method="post" style="margin-top: 20px;">
+        {% csrf_token %}
+        <input type="submit" value="Delete Team" onclick="return confirm('Are you sure you want to delete this team?');">
+    </form>
+
+    <a href="{% url 'home' %}"><button type="button">Home</button></a> <!-- Home button -->
 </body>
 </html>
